Replace Integer constructor calls with Integer.valueOf(...).